# DZscrap

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  LICENSE  PRIVACY_POLICY.md  README.md  STORE_LISTING.md  docker-compose.yml  package.py  package_extension.py  requirements.txt  scratch_test.py
backend/: config.py  database.py  main.py  models.py  schemas.py
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/db/: sqlite.rs
crates/backend/src/handlers/: mod.rs  scrape_handler.rs
crates/backend/src/services/: fetch_service.rs  mod.rs  parse_service.rs
crates/frontend/: Cargo.toml  index.html  style.css
crates/frontend/src/: app.rs  main.rs
crates/frontend/src/components/: history_list.rs  mod.rs  result_card.rs  url_form.rs
crates/shared/src/: dto.rs  errors.rs
docker/: backend.Dockerfile  worker.Dockerfile
extension/: background.js  download.html  download.js  manifest.json  popup.html  popup.js  scraper.js  style.css
extension/lib/: db.js
scraper/: scratch_debug.py  scratch_test.py
scraper/scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/scraper/spiders/: image_spider.py  test_spider.py
storage/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
tests/: test_api.py
worker/: celery_app.py  tasks.py
