[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
shared = { path = "../shared" }
chrono = "0.4"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
