[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
shared = { path = "../shared" }
wasm-bindgen = "0.2"
gloo-net = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
